Fix overflow styling for windows os

--- a/styles/articles.css
+++ b/styles/articles.css
@@ -48,7 +48,8 @@ body {
 
 /* Katex */
 .katex {
-    overflow: auto;
+    overflow-x: auto;
+    overflow-y: hidden;
 }
 
 /* Blog Post Styles */
